2009-01-12  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* src/callbacks.c(cb_newtocVisibleAdjust): Use VlistVisibleLength to
	  calculate visible area.

	* src/scrollbar.c(MoveThumb): New calculation of TOP, the actual
	  relative position of the scrollbar.
	  
	* src/scrollbar.c(GetRelativeThumbLocation): Adjusted to fit to
	  MoveThumb.
	  
	* src/callbacks.c(cb_newtocScrollbar): Just scroll one position less
	  than calculated, but at least one. This should help to ensure that
	  every page is reachable by this mechanism.

2009-01-02  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* src/FileSel.c: Bugfixed

2009-01-01  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* src/Vlist.c: Fix a regression from prev. patch: The scroll arrows
	on the page panel did not work any more.
	
	* src/FileSel.c: Changed in order to benefit from the changes in Vlist
	to support large lists.

2009-01-01  Bernhard R. Link <brlink@debian.org>

	* src/Vlist.c, src/Vlist.h, VlistP.h: support large lists (big change!)
	
	* src/actions.c, src/callbacks.c, src/main.c, src/misc.c:
	Changed in order to benefit from the change above.


2008-09-28  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* src/secsscanf.c: Provide an implementation of strndup named
	GNU_strndup and adjust the only call.

2008-09-28  Bernhard R. Link <brlink@debian.org>

	* src/file.c (file_assureDirectory): Changed 2nd argument to be const
	
	* src/info.c: Fixed one warning
	
	* configure.ac: Cleaner ZIO Detection

2008-09-28  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* configure.ac, src/versionp.h: Bumped version to 3.6.6.90

2008-09-25  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* configure.ac, src/versionp.h: Bumped version to 3.6.6
	
	* Updated my e-mail address.

2008-09-09  Dr. Werner Fink <werner@suse.de>

	* configure.ac: Check if the ZIO Library is available.

	* src/ps.c (psscan): Use the ZIO Library to decompress a file
	if the ZIO Library is presemt.

2008-09-09  Olaf Kirch <okir@suse.de>
